# ani-agent-sdk-python

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
contract-tests/: test_protocol_contract.py
examples/: echo_bot.py
protocol/: manifest.json  openapi.yaml  routes.generated.json  ws-events.schema.json
scripts/: fetch_protocol.py
src/ani_agent_sdk/: __init__.py  client.py  models.py
tests/: test_client.py
